--- a/src/pages/Learn/CourseInfo.module.css
+++ b/src/pages/Learn/CourseInfo.module.css
@@ -52,8 +52,13 @@
   font-size: 1rem;
   color: #7f8c8d;
   font-weight: bold;
+   margin-bottom: 0.5rem;
 }
-
+.teacherCreatedAt {
+  font-size: 0.9rem;
+  color: #95a5a6;
+  font-weight: normal; /* Different font weight for createdAt */
+}
 .courseDescriptionSection {
   background-color: #fff;
   padding: 1.5rem;
@@ -143,7 +148,7 @@
   }
 
   .lessonsList {
-    grid-template-columns: repeat(auto-fill, minmax(12.5rem, 1fr)); /* 200px -> 12.5rem */
+    grid-template-columns: repeat(auto-fill, minmax(12.5rem, 1fr)); 
   }
 
   .lessonItem h3 {
@@ -178,6 +183,6 @@
   }
 
   .lessonsList {
-    grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr)); /* 160px -> 10rem */
+    grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr)); 
   }
 }
