--- a/src/components/layout/ForgotPassWordForm.module.css
+++ b/src/components/layout/ForgotPassWordForm.module.css
@@ -1,3 +1,10 @@
+/* Import the Roboto font only for this form */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+.pageContainer {
+    font-family: 'Roboto', sans-serif;
+}
+
 .header, .SetPassWordId {
     font-size: 1.5rem;
     font-weight: bold;
@@ -5,30 +12,30 @@
     margin-bottom: 0.625rem;
 }
 
-.instructions, .label, .resendText {
+.instructions, .emailLabel, .resendText {
     font-size: 1rem;
     color: #333;
 }
 
 .instructions {
-    margin-bottom: 1.25rem;
+    padding-top: 0.625rem;   
+    padding-bottom: 1rem; 
 }
 
-.label {
+.emailLabel {
     margin-bottom: 0.3125rem;
     display: block;
 }
 
-.input {
+.emailInput {
     width: 100%;
     padding: 0.625rem;
     margin-bottom: 0.9375rem;
     border: 1px solid #ddd;
     border-radius: 0.25rem;
-    box-sizing: border-box;
 }
 
-.button {
+.resetButton {
     width: 100%;
     padding: 0.625rem;
     background-color: #1a2d5c;
@@ -40,7 +47,7 @@
     margin-top: 0.625rem;
 }
 
-.button:hover {
+.resetButton:hover {
     background-color: #0e1b3d;
 }
 
@@ -54,13 +61,13 @@
     color: #f65e39;
     text-decoration: none;
     font-weight: bold;
+    cursor: pointer;
 }
 
 .resendLink:hover {
     text-decoration: underline;
 }
 
-/* Wrapper to center the form */
 .pageContainer, .formContainer {
     display: flex;
     justify-content: center;
