--- a/src/components/layout/ForgotPassWordForm.module.css
+++ b/src/components/layout/ForgotPassWordForm.module.css
@@ -1,95 +1,133 @@
-/* Import the Roboto font only for this form */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
+.pageOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(5px);
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .pageContainer {
-    font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
+}
+
+.formContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #f7f7f7;
+  padding: 2.5rem;
+  width: 25rem;
+  border-radius: 0.5rem;
+  box-shadow: 0.0625rem 0px 1.25rem rgba(0, 0, 0, 0.5);
+  position: relative;
 }
 
 .header, .SetPassWordId {
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: #f65e39;
-    margin-bottom: 0.625rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #f65e39;
+  margin-bottom: 0.625rem;
 }
 
 .instructions, .emailLabel, .resendText {
-    font-size: 1rem;
-    color: #333;
+  font-size: 1rem;
+  color: #333;
 }
 
 .instructions {
-    padding-top: 0.625rem;   
-    padding-bottom: 1rem; 
+  padding-top: 0.625rem;   
+  padding-bottom: 1rem; 
 }
 
 .emailLabel {
-    margin-bottom: 0.3125rem;
-    display: block;
+  margin-bottom: 0.3125rem;
+  display: block;
+  text-align: left;
+  align-self: flex-start;
+  width: 100%;
 }
 
 .emailInput {
-    width: 100%;
-    padding: 0.625rem;
-    margin-bottom: 0.9375rem;
-    border: 1px solid #ddd;
-    border-radius: 0.25rem;
+  width: 100%;
+  padding: 0.625rem;
+  margin-bottom: 0.9375rem;
+  border: 1px solid #ddd;
+  border-radius: 0.25rem;
 }
 
 .resetButton {
-    width: 100%;
-    padding: 0.625rem;
-    background-color: #1a2d5c;
-    color: #fff;
-    border: none;
-    border-radius: 0.25rem;
-    cursor: pointer;
-    font-size: 1rem;
-    margin-top: 0.625rem;
+  width: 100%;
+  padding: 0.625rem;
+  background-color: #1a2d5c;
+  color: #fff;
+  border: none;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  font-size: 1rem;
+  margin-top: 0.625rem;
 }
 
 .resetButton:hover {
-    background-color: #0e1b3d;
+  background-color: #0e1b3d;
 }
 
 .resendText {
-    font-size: 0.875rem;
-    color: #666;
-    margin-top: 0.9375rem;
+  font-size: 0.875rem;
+  color: #666;
+  margin-top: 0.9375rem;
+  text-align: center;
 }
 
 .resendLink {
-    color: #f65e39;
-    text-decoration: none;
-    font-weight: bold;
-    cursor: pointer;
+  color: #f65e39;
+  text-decoration: none;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 .resendLink:hover {
-    text-decoration: underline;
-}
-
-.pageContainer, .formContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #f7f7f7;
-    padding: 2.5rem;
-    width: 25rem;
-    border-radius: 0.5rem;
-    box-shadow: 0.0625rem 0px 1.25rem rgba(0, 0, 0, 0.5);
-    z-index: 1;
+  text-decoration: underline;
 }
 
 .closeFormButton {
-    color: red;
-    font-weight: bold;
-    background: none;
-    border: none;
-    position: relative;
-    transform: translate(-150px, -5px);
+  color: red;
+  font-weight: bold;
+  background: none;
+  border: none;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+}
+
+.formContentWrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.centeredText {
+  width: 100%;
+  text-align: center;
+}
+
+.successMessage {
+  color: green;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.errorMessage {
+  color: red;
+  margin-bottom: 1rem;
+  text-align: center;
 }
