--- a/src/pages/Learn/Lesson.module.css
+++ b/src/pages/Learn/Lesson.module.css
@@ -32,7 +32,7 @@
 }
 
 .descriptionSection:hover {
-  transform: translateX(10px);
+  transform: translateX(2px);
 }
 
 .descriptionTitleContainer {
@@ -51,13 +51,30 @@
   cursor: pointer;
   font-size: 1.1rem;
   font-weight: 500;
-  color: white;
-  transition: background-color 0.3s ease, transform 0.3s ease;
+  color: white;  
 }
 
 .descriptionTitle:hover {
-  background-color: #debf41;
-  transform: scale(1.02);
+  background-color: #debf41; 
+}
+.highlightedWord {
+  background-color: yellow; /* Highlight the currently spoken word */
+}
+.clickedKeyDisplay {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #333;
+  background-color: #f0f0f0;
+  padding: 0.5rem;
+  border-radius: 8px;
+}
+
+.speakerIconContainer {
+  display: block;
+  margin-top: 0.5rem;
 }
 
 .speakerIcon {
@@ -79,7 +96,7 @@
   margin-top: 0.5rem;
   background-color: #fafafa;
   font-size: 1rem;
-  color: #444444;
+  color: #1c1c1c;
   line-height: 1.6;
 }
 
