--- a/src/pages/UserDashboard/Courses.module.css
+++ b/src/pages/UserDashboard/Courses.module.css
@@ -7,13 +7,24 @@
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background-color: #eef2f3;
 }
-
+.enrolledmsgforDiv {
+  background-color: #b2ac0b;
+  color: rgb(251, 248, 248);
+}
 .searchContainer {
   display: flex;
   flex-direction: column;
   background-color: #eef2f3;
 }
-
+.enrolledMsg {
+   background-color: #e6e6f6;
+  margin: 0;
+text-align: left;
+padding: 0.5rem 1rem;
+font-size: 1.25rem; 
+color: #0d0d0d;
+ 
+}
 .form > h2 {
   color: #f35c3c;
   padding: 1rem;
@@ -75,7 +86,14 @@
   margin-bottom: 0.375rem;
   color: #555;
 }
-
+.courseDescription > p {
+  text-align: left;
+  height: 2rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  margin-left: 0.5rem;
+}
 .starFilled {
   color: #ffcc00;
 }
@@ -153,8 +171,8 @@
 }
 .errorMessage {
   color: red;
-  font-size: 1rem;
-  margin-bottom: 0.75rem
+  font-size: 16px;
+  margin-bottom: 10px;
 }
 /* Media Queries for responsiveness */
 
