Add Create and Update Quiz pages Add styles for Create and Update lesson

--- a/src/pages/Courses/Courses.module.css
+++ b/src/pages/Courses/Courses.module.css
@@ -30,3 +30,12 @@
     border: #0f2240 solid 0.1rem;
     border-radius: 0.625rem;
 }
+
+.courseDescription {
+    display: flex;
+    flex-direction: column;
+    p {
+        height: 3.5rem;
+        overflow: hidden;
+    }
+}
