--- a/src/components/LessonsTable/LessonsTable.module.css
+++ b/src/components/LessonsTable/LessonsTable.module.css
@@ -1,4 +1,54 @@
+.lessonTable {
+  display: inline-table;
+  border-collapse: collapse;
+  border-top: black solid 2px;
+  margin: 1.25rem;
+}
+
+.lessonTableHeader {
+  border-bottom: black solid 2px;
+  th {
+    padding: 0.625rem;
+    text-align: center;
+  }
+  tr {
+    height: 5rem;
+  }
+}
+
+.lessonTableBody {
+  border-bottom: black solid 0.125rem;
+  td {
+    padding: 0.625rem;
+    text-align: center;
+  }
+    td:nth-last-child(1) {
+    width: 4rem;
+    }
+  tr {
+    height: 5rem;
+    border-bottom: black solid 0.0625rem;
+  }
+}
+
 .lessonEditLink {
-  color: #007bff;
+  color: black;
   text-decoration: none;
+  background-color: #f3c414;
+  border: #0f2240 solid 0.1rem;
+  border-radius: 0.625rem;
+  padding: 0.6rem 1.5rem;
+}
+
+.deleteLessonButton {
+    background-color: #F3C414;
+    color: black;
+    font-family: inherit;
+    font-weight: bold;
+    font-size: 1rem;
+    border: #0f2240 solid 0.1rem;
+    border-radius: 0.625rem;
+    width: 5rem;
+    height: 2.5rem;
+    margin: 0.625rem;
 }
