--- a/src/pages/CourseLessons/CourseLessons.module.css
+++ b/src/pages/CourseLessons/CourseLessons.module.css
@@ -1,24 +1,47 @@
 .courseLessonsContainer {
     display: flex;
+    flex-direction: row;
+}
+
+.lessonsContainer {
+    display: flex;
     flex-direction: column;
-    /*flex-grow: 1;*/
-    img {
-        margin: 1rem;
-        width: 6rem;
-        height: 5rem;
-    }
+    flex-grow: 1;
+    margin: 2rem;
 }
 
 .courseInfoContainer {
     display: flex;
-    flex-direction: column;
-    /*justify-content: center;*/
-    /*align-items: center;*/
-    /*margin: 1rem;*/
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem;
+    img {
+        margin-left: 3rem;
+        width: 10rem;
+        height: 10rem;
+    }
+    p {
+        font-size: 1rem;
+        margin: 1rem 2rem;
+    }
 }
 
-.addLessonButton {
-    color: #0f2240;
-    background-color: #f7b600;
+.courseLink {
+    text-decoration: none;
+    color: black;
+}
 
+.addLessonLink {
+    background-color: #0f2240;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    border-radius: 0.625rem;
+    width: 10rem;
+    height: 2.5rem;
+    margin: 1rem auto;
+    cursor: pointer;
 }
