Create and Update quiz page (#61)
* Add New Lesson page

* Add Video component

* Delete duplicated lines

* Add Create and Update Quiz pages
Add styles for Create and Update lesson

* Fix merge conflicts

* Fix courseController#createCourse

--- a/src/pages/FrontPage/FrontPage.module.css
+++ b/src/pages/FrontPage/FrontPage.module.css
@@ -136,6 +136,11 @@
 
 .courseDescription > div > p {
   text-align: left;
+  height: 2rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  margin-left: 0.5rem;
 }
 .advertisementContainer {
   display: flex;
