--- a/src/pages/Learn/Learn.module.css
+++ b/src/pages/Learn/Learn.module.css
@@ -34,13 +34,12 @@
 .lessonList {
   width: 30%;
   padding: 0.9375rem;
-  background-color: #f3c414;
+  background-color: #fff;
   border-radius: 0.9375rem;
   box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
   max-height: 70vh;
   overflow-y: auto;
 }
-
 
 .lessonListHeader {
   margin-bottom: 0.8rem;
@@ -63,6 +62,7 @@
 .lessonListHeader h4 {
   position: relative;
   padding-left: 1.5rem;
+  font-size: 1.7rem;
   margin: 0;
   color: #17202a;
 }
@@ -76,7 +76,6 @@
   color: #17202a;
 }
 .lessonListHeader h4::before {
-  /* content: '>'; */
   position: absolute;
   left: 0;
   top: 50%;
@@ -103,12 +102,13 @@
   cursor: pointer;
   padding: 0.75rem;
   margin-bottom: 0.5rem;
-  background-color: #fff;
+  background-color: #fdfbed;
   border-radius: 0.625rem;
   transition:
     background-color 0.3s ease,
     transform 0.2s ease;
-  font-size: 1.1rem;
+  font-size: 1.4rem;
+  font-weight: 00;
   color: #2c3e50;
   display: flex;
   align-items: center;
@@ -116,8 +116,9 @@
 }
 
 .lessonItem:hover {
-  background-color: #5d92e2;
-  color: #fff;
+  background-color: #f0f8ff;
+  color: #070000;
+  border-left: 0.3125rem solid #001f3f;
   transform: translateX(0.3125rem);
 }
 
@@ -162,14 +163,13 @@
   background-color: #042d5a;
   color: white;
   border: none;
-  padding: 0.5rem 1rem; 
-  font-size: 1rem; 
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
   float: left;
-  border-radius: 0.25rem; 
+  border-radius: 0.25rem;
   cursor: pointer;
-  margin-right: 0.625rem; 
+  margin-right: 0.625rem;
 }
-
 
 .backButton:hover {
   background-color: #0056b3;
