--- a/src/pages/CourseLessons/CourseLessons.module.css
+++ b/src/pages/CourseLessons/CourseLessons.module.css
@@ -35,6 +35,7 @@
 .addLessonLink {
     background-color: #0f2240;
     color: white;
+    text-decoration: none;
     display: flex;
     justify-content: center;
     align-items: center;
