Made small design changes

--- a/src/pages/Learn/Learn.module.css
+++ b/src/pages/Learn/Learn.module.css
@@ -160,7 +160,7 @@
   margin: 0 auto;
 }
 .backButton {
-  background-color: #042d5a;
+  background-color: #0577d4;
   color: white;
   border: none;
   padding: 0.5rem 1rem;
