--- a/src/components/CourseForm/CourseForm.module.css
+++ b/src/components/CourseForm/CourseForm.module.css
@@ -1,4 +1,5 @@
 .courseFormContainer {
+    font-family: 'Roboto', sans-serif;
     display: flex;
 }
 
@@ -68,4 +69,9 @@
     height: 2.5rem;
     margin: 1rem;
     cursor: pointer;
+}
+
+.errorContainer {
+    color: red;
+    font-size: 0.8rem;
 }
