--- a/src/pages/Courses/Courses.module.css
+++ b/src/pages/Courses/Courses.module.css
@@ -1,4 +1,5 @@
 .courseContainer {
+    font-family: 'Roboto', sans-serif;
   display: flex;
   flex-grow: 1;
 }
@@ -34,6 +35,7 @@
 .courseDescription {
     display: flex;
     flex-direction: column;
+    flex: 1;
     p {
         height: 3.5rem;
         overflow: hidden;
