--- a/src/pages/CourseLessons/CourseLessons.module.css
+++ b/src/pages/CourseLessons/CourseLessons.module.css
@@ -1,4 +1,5 @@
 .courseLessonsContainer {
+    font-family: 'Roboto', sans-serif;
     display: flex;
     flex-direction: row;
 }
@@ -35,6 +36,7 @@
 .addLessonLink {
     background-color: #0f2240;
     color: white;
+    text-decoration: none;
     display: flex;
     justify-content: center;
     align-items: center;
